2006-06-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Warned MSYS users to update grep & install mktemp, thanks Jason Sheets
  - Rewrote some text to be a little clearer
  - Reduced duplication in description of "common" file
  - Updated description of "common" file to current way of working
2006-06-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt, win32/mingw.mak.template, tools/template2mak.py,
 win32/vc-test.mak.template, win32/vc-libpqxx.mak.template:
  - Make "make" work from main directory, thanks Trigve Siver
2006-06-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - MinGW socket library detection patch by tometzky@batory.org.pl
 tools/preprelease:
  - Fixed md5sum generation (wrote empty file before)
  - Use "--" option on mv, rm, etc.
2006-06-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Moved detection of and workaround for broken grep to tools/splitconfig
 tools/Makefile.am:
  - Added tools/splitconfig
 tools/preprelease:
  - Don't erase reference documentation every time (takes too much time)
 tools/splitconfig:
  - New
  - Encapsulates workaround for broken greps
  - Should now also detect latest bug with "grep -w -F" in some GNU greps
  - Major cleanup of grep failure detection
2006-06-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems:
  - One item said "private" instead of "internal"
 configure.ac.in:
  - Fixed warning in PQprepare() (can't have those in maintainer mode)
 include/pqxx/binarystring.hxx:
  - Documented escape_binary() as deprecated
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, src/transaction_base.cxx:
  - Implemented bytea equivalents of esc()
 test/test062.cxx:
  - Use new transaction_base::esc_raw() function
2006-06-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template:
  - Replaced backslashes in paths with slashes
  - Fixes "incomplete makefile" problem
2006-05-29  Jeroen T. Vermeulen <jtv@xs4all.nl>