@@ -1,4 +1,5 @@
 2.6.8
+ - Automatically detect Windows socket library with MinGW
  - Windows "make" fixed to run from main directory, not win32
 2.6.7
  - New escape functions for binary data: transaction_base::esc_raw()
